hphp/test/zend/good/Zend/tests/bug63219.php.expectf

Fatal error: Unknown trait 'Typo' in %s/bug63219.php on line 6
